--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link rel="icon" href="2-removebg-preview.png" type="image/x-icon">
   </head>
   <body>
     <div class="header">
